CDO NEWS
--------
Version 1.6.0 (?? March 2013):

   Changed operators:
     * setcalendar: changed CDO calendar names to CF calendar names
                    (standard, proleptic_gregorian, 360_day, 365_day, 366_day)
   New operators:
     * mergegrid: merge horizontal grids

Version 1.5.9 (17 December 2012):

   New features:
     * cdo option -z zip: added optional compression level -z zip[_1-9]
     * cdo: added option -k <chunktype> to set the chunk type to auto, grid or lines
     * Added workaround to combine CDO operators with the result of mergetime, merge, copy, cat, ens<STAT>
       - use one input parameter with wildcards in single quotes, e.g.: 'ifile?_*' 
   Changed operators:
     * enlarge: added missing value support
   Fixed bugs:
     * gradsdes: failed
     * sellevel: loosing level bounds
     * wrong result for user defined lonlat grids with xfirst < 0
       (This bug was introduced in CDO version 1.5.8)

Version 1.5.8 (30 October 2012):

   New features:
     * Added support for netCDF4(HDF5) formatted SCRIP grid description files
     * added CDO option -L to lock all I/O calls. This option is neccessary if external I/O libraries like 
       netCDF4 (HDF5) were installed without thread-safe support.
   New operators:
     * setunit: Set variable unit
     * chunit:  Change variable unit
   Changed operators:
     * Info:  changed output format
     * Sinfo: changed output format
     * Diff:  changed output format
   Fixed bugs:
     * remaplaf: fixed bug in binary_search_int()
     * eca_rr1: result has wrong long name attribute

Version 1.5.6.1 (26 July 2012):

   Fixed bugs:
     * Wrong results with the following statistical functions:
         *mean, *avg, *sum, *var, *std
       only if all of the following conditions are complied:
         - x86_64 machine (tornado, squall, thunder, lizard)
         - dataset has no missing values
         - the horizontal grid size is > 1 and not multiple of 8